--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
 
   <!-- Your code here -->
-<img  title="tiger" src="../images/my_company_logo.png" alt="my company name" title="We're here to help you!">
+<img  title="tiger" src="../images/my_company_logo.png" alt="my company name" >
 </body>
 </html>
