--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <!-- Your code here -->
-<img  title="tiger" src="../images/my_company_logo.png" alt="my company name" >
+<img  title="tiger" src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="my company name" >
 
 </body>
 </html>
