--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <!-- Your code here -->
 <img  title="tiger" src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="my company name" >
+<img  title="tiger" src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="my company name" >
+<img  title="tiger" src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="my company name" >
 
 </body>
 </html>
