--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+<img  title="tiger" src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="my company name" >
+<img  title="tiger" src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="my company name" >
+<img  title="tiger" src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="my company name" >
 
 </body>
 </html>
